--- a/MC2-Group6/Feature/TaskDetails/AddTags/TableViewCell/AddTagsTagsTableViewCell.xib
+++ b/MC2-Group6/Feature/TaskDetails/AddTags/TableViewCell/AddTagsTagsTableViewCell.xib
@@ -9,15 +9,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="177" id="KGk-i7-Jjw" customClass="AddTagsTagsTableViewCell" customModule="MC2_Group6" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="220"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="488" id="KGk-i7-Jjw" customClass="AddTagsTagsTableViewCell" customModule="MC2_Group6" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="354"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="220"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="354"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="l3C-U9-8bZ">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="220"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="354"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0LB-LS-Q8L">
                             <size key="itemSize" width="128" height="128"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -28,17 +28,17 @@
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="l3C-U9-8bZ" secondAttribute="bottom" id="39Z-cS-qCa"/>
-                    <constraint firstAttribute="trailing" secondItem="l3C-U9-8bZ" secondAttribute="trailing" id="60y-j2-tLd"/>
-                    <constraint firstItem="l3C-U9-8bZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="GnP-zO-l9G"/>
-                    <constraint firstItem="l3C-U9-8bZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="nHX-TS-j5K"/>
+                    <constraint firstAttribute="bottom" secondItem="l3C-U9-8bZ" secondAttribute="bottom" id="9kj-gf-Mpv"/>
+                    <constraint firstItem="l3C-U9-8bZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="bDA-yr-i4h"/>
+                    <constraint firstItem="l3C-U9-8bZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="fH0-Qw-rR2"/>
+                    <constraint firstAttribute="trailing" secondItem="l3C-U9-8bZ" secondAttribute="trailing" id="fQY-ba-d7Z"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="tagsCollectionView" destination="l3C-U9-8bZ" id="b2r-If-b10"/>
             </connections>
-            <point key="canvasLocation" x="213.04347826086959" y="138.61607142857142"/>
+            <point key="canvasLocation" x="213.04347826086959" y="183.48214285714286"/>
         </tableViewCell>
     </objects>
 </document>
