--- a/MC2-Group6/Feature/TaskDetails/AddTags/CollectionViewCell/AddTagsTagsCollectionViewCell.xib
+++ b/MC2-Group6/Feature/TaskDetails/AddTags/CollectionViewCell/AddTagsTagsCollectionViewCell.xib
@@ -29,6 +29,9 @@
                                 <rect key="frame" x="51" y="1" width="17" height="14"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title=""/>
+                                <connections>
+                                    <action selector="deleteTag:" destination="gTV-IL-0wX" eventType="touchUpInside" id="9ra-Jd-dzT"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
