--- a/MC2-Group6/Feature/TaskDetails/Test View/Cell/TagsCell/TagsTableViewCell.xib
+++ b/MC2-Group6/Feature/TaskDetails/Test View/Cell/TagsCell/TagsTableViewCell.xib
@@ -22,7 +22,7 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="AdN-SF-4Tc">
                                 <rect key="frame" x="0.0" y="43" width="320" height="45"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1ZE-S0-qYO">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1ZE-S0-qYO">
                                     <size key="itemSize" width="128" height="44"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
