--- a/MC2-Group6/Feature/TaskDetails/Test View/Test.storyboard
+++ b/MC2-Group6/Feature/TaskDetails/Test View/Test.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sJz-9j-plJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Nf8-fh-dkH">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -93,8 +93,6 @@
         <!--Add Tags View Controller-->
         <scene sceneID="bcT-C5-rIc">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3Xe-ko-NBO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <exit id="eVE-rN-ZYG" userLabel="Exit" sceneMemberID="exit"/>
                 <viewController id="hxb-MV-dXM" customClass="AddTagsViewController" customModule="MC2_Group6" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7Pp-xo-CUb">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
@@ -107,16 +105,24 @@
                                 </constraints>
                                 <items>
                                     <navigationItem title="Add Tags" id="03d-7V-DvU">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" id="ZM1-CU-tJe">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="dZx-lC-3Mi">
+                                                <rect key="frame" x="20" y="11" width="92" height="34.5"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="X"/>
+                                            </button>
+                                        </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" style="plain" id="ss4-9M-RZJ">
                                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="1su-o0-n7y">
                                                 <rect key="frame" x="302" y="11" width="92" height="34.5"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Done"/>
+                                                <connections>
+                                                    <action selector="doneButton:" destination="hxb-MV-dXM" eventType="touchUpInside" id="Waq-7b-6eG"/>
+                                                </connections>
                                             </button>
-                                            <connections>
-                                                <action selector="unwindToTask:" destination="hxb-MV-dXM" id="7Tk-Sx-DiH"/>
-                                            </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
@@ -143,9 +149,11 @@
                     <navigationItem key="navigationItem" id="6OQ-zR-EcL"/>
                     <connections>
                         <outlet property="tagsTableView" destination="kPE-YT-vcJ" id="qwB-Nb-SUb"/>
-                        <segue destination="eVE-rN-ZYG" kind="unwind" identifier="unwindToAddTask" unwindAction="unwind:" id="fmR-gD-8bX"/>
+                        <segue destination="eVE-rN-ZYG" kind="unwind" identifier="backToTask" unwindAction="unwindToSegue:" id="ExL-ew-RdI"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Xe-ko-NBO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="eVE-rN-ZYG" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1679.7101449275362" y="77.678571428571431"/>
         </scene>
@@ -174,6 +182,92 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JT3-3u-Poh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-239" y="78"/>
+        </scene>
+        <!--Edit Task View Controller-->
+        <scene sceneID="mLw-fB-nI3">
+            <objects>
+                <viewController id="Nf8-fh-dkH" customClass="EditTaskViewController" customModule="MC2_Group6" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9Qx-gw-hWK">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="dfv-nH-xQ9"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <connections>
+                        <segue destination="Reh-Rm-rX5" kind="presentation" identifier="toAddTagsFromEdit" id="RnY-hR-70a"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OZX-Sb-A2E" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="955" y="-643"/>
+        </scene>
+        <!--Edit Add Tags View Controller-->
+        <scene sceneID="r3v-we-Gua">
+            <objects>
+                <viewController id="Reh-Rm-rX5" customClass="EditAddTagsViewController" customModule="MC2_Group6" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Dcd-rd-wg9">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0BJ-DU-1V6">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="sf8-Mt-Lss"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Add Tags" id="lHp-dp-NEc">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" id="PqV-tZ-ttT">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="fvU-mm-Uw9">
+                                                <rect key="frame" x="20" y="11" width="92" height="34.5"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="X"/>
+                                            </button>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" style="plain" id="LnP-ty-cvR">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="KKI-BG-JKi">
+                                                <rect key="frame" x="302" y="11" width="92" height="34.5"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Done"/>
+                                                <connections>
+                                                    <action selector="doneButton:" destination="Reh-Rm-rX5" eventType="touchUpInside" id="LjB-Jk-ORl"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="E8G-va-3hG">
+                                <rect key="frame" x="0.0" y="100" width="414" height="697"/>
+                                <color key="backgroundColor" systemColor="systemGray5Color"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="u3e-qu-FsF"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="E8G-va-3hG" firstAttribute="top" secondItem="0BJ-DU-1V6" secondAttribute="bottom" constant="12" id="2f0-lB-AXS"/>
+                            <constraint firstItem="0BJ-DU-1V6" firstAttribute="leading" secondItem="u3e-qu-FsF" secondAttribute="leading" id="4pM-a2-W3b"/>
+                            <constraint firstItem="E8G-va-3hG" firstAttribute="leading" secondItem="u3e-qu-FsF" secondAttribute="leading" id="Kx1-Wq-7Sp"/>
+                            <constraint firstItem="0BJ-DU-1V6" firstAttribute="trailing" secondItem="u3e-qu-FsF" secondAttribute="trailing" id="RRK-Nd-NS2"/>
+                            <constraint firstItem="E8G-va-3hG" firstAttribute="trailing" secondItem="u3e-qu-FsF" secondAttribute="trailing" id="bNg-sx-Ue5"/>
+                            <constraint firstItem="E8G-va-3hG" firstAttribute="top" secondItem="0BJ-DU-1V6" secondAttribute="bottom" constant="12" id="dkr-jM-4jU"/>
+                            <constraint firstItem="u3e-qu-FsF" firstAttribute="bottom" secondItem="E8G-va-3hG" secondAttribute="bottom" constant="45" id="esC-3e-Nr9"/>
+                            <constraint firstItem="0BJ-DU-1V6" firstAttribute="top" secondItem="u3e-qu-FsF" secondAttribute="top" id="hsE-Av-P6u"/>
+                            <constraint firstItem="0BJ-DU-1V6" firstAttribute="top" secondItem="u3e-qu-FsF" secondAttribute="top" id="zly-rq-h8i"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Mjk-eg-igg"/>
+                    <connections>
+                        <outlet property="tagsTableView" destination="E8G-va-3hG" id="h1G-wz-bx5"/>
+                        <segue destination="3qm-Uh-RN7" kind="unwind" identifier="backToTaskEdit" unwindAction="unwindToSegue:" id="pwz-R1-cQs"/>
+                        <segue destination="3qm-Uh-RN7" kind="unwind" unwindAction="unwindToSegue:" id="3MQ-hc-eQD"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Cv-gL-Vbw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="3qm-Uh-RN7" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1680" y="-644"/>
         </scene>
     </scenes>
     <resources>
