--- a/MC2-Group6/MainPage/Main.storyboard
+++ b/MC2-Group6/MainPage/Main.storyboard
@@ -17,7 +17,7 @@
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="SG9-4w-bG7" kind="relationship" relationship="viewControllers" id="vIG-m8-2SC"/>
+                        <segue destination="u3B-Kn-DUq" kind="relationship" relationship="viewControllers" id="y0K-8s-40X"/>
                         <segue destination="BHX-Ia-Xwl" kind="relationship" relationship="viewControllers" id="1m0-HY-4CH"/>
                     </connections>
                 </tabBarController>
@@ -25,15 +25,15 @@
             </objects>
             <point key="canvasLocation" x="-19" y="-200"/>
         </scene>
-        <!--TaskTest-->
-        <scene sceneID="KF4-Z5-Rj6">
+        <!--MainTask-->
+        <scene sceneID="6hD-VZ-iKW">
             <objects>
-                <viewControllerPlaceholder storyboardIdentifier="TaskSB" storyboardName="TaskTest" id="SG9-4w-bG7" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="r3c-g6-qSp"/>
+                <viewControllerPlaceholder storyboardIdentifier="MainTaskSB" storyboardName="MainTask" id="u3B-Kn-DUq" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="of9-lX-0uq"/>
                 </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fKE-rc-1o0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rxp-Jt-Lpb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="699" y="-329"/>
+            <point key="canvasLocation" x="693" y="-340"/>
         </scene>
         <!--Timer-->
         <scene sceneID="SET-4S-w9d">
