--- a/MC2-Group6/Feature/TaskDetails/AddTags/TableViewCell/AddTagsTagsTableViewCell.xib
+++ b/MC2-Group6/Feature/TaskDetails/AddTags/TableViewCell/AddTagsTagsTableViewCell.xib
@@ -18,6 +18,7 @@
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="l3C-U9-8bZ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="354"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0LB-LS-Q8L">
                             <size key="itemSize" width="128" height="128"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
