--- a/MC2-Group6/TabBar/TabBar.storyboard
+++ b/MC2-Group6/TabBar/TabBar.storyboard
@@ -25,10 +25,10 @@
             </objects>
             <point key="canvasLocation" x="-19" y="-200"/>
         </scene>
-        <!--Task-->
+        <!--TaskPage-->
         <scene sceneID="6hD-VZ-iKW">
             <objects>
-                <viewControllerPlaceholder storyboardIdentifier="MainTaskSB" storyboardName="Task" id="u3B-Kn-DUq" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardIdentifier="MainTaskSB" storyboardName="TaskPage" id="u3B-Kn-DUq" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="of9-lX-0uq"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rxp-Jt-Lpb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
